--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,24 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>oozie-runner</name>
 	<url>http://maven.apache.org</url>
+
+    <scm>
+        <connection>scm:git:ssh://git@github.com/CeON/oozie-runner.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/CeON/oozie-runner.git</developerConnection>
+        <url>https://github.com/CeON/oozie-runner</url>
+    </scm>
+
+    <distributionManagement>
+        <repository>
+            <id>kdd-releases</id>
+            <url>http://maven.ceon.pl/artifactory/kdd-releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>kdd-snapshots</id>
+            <url>http://maven.ceon.pl/artifactory/kdd-snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
