--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>pl.edu.icm.coansys</groupId>
 	<artifactId>oozie-runner</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<name>oozie-runner</name>
 	<url>http://maven.apache.org</url>
 
