--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>pl.edu.icm.oozie</groupId>
 	<artifactId>oozie-runner</artifactId>
 	<packaging>jar</packaging>
-	<version>1.2-SNAPSHOT</version>
+	<version>1.2-CDH513-SNAPSHOT</version>
 	<name>oozie-runner</name>
 	<url>http://maven.apache.org</url>
 
@@ -33,17 +33,17 @@
 		<dependency>
 			<groupId>org.apache.oozie</groupId>
 			<artifactId>oozie-client</artifactId>
-			<version>3.1.3-cdh4.0.1</version>
+			<version>4.0.0-cdh5.1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-common</artifactId>
-			<version>2.0.0-cdh4.0.1</version>
+			<version>2.3.0-cdh5.1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-hdfs</artifactId>
-			<version>2.0.0-cdh4.0.1</version>
+			<version>2.3.0-cdh5.1.3</version>
 		</dependency>
 	 <dependency>
 	  <groupId>org.springframework</groupId>
