--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>pl.edu.icm.oozie</groupId>
     <artifactId>oozie-runner</artifactId>
     <packaging>jar</packaging>
-    <version>1.5</version>
+    <version>1.6-SNAPSHOT</version>
     <name>oozie-runner</name>
     <url>http://maven.apache.org</url>
 
@@ -11,7 +11,7 @@
         <connection>scm:git:ssh://git@github.com/CeON/oozie-runner.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/CeON/oozie-runner.git</developerConnection>
         <url>https://github.com/CeON/oozie-runner</url>
-      <tag>oozie-runner-1.5</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
